--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">AM</a>
+            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip"><img src="images/AM-final-logo.png" width="48.8" height="39.2"></a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -43,12 +43,12 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/wpi-campus.jpeg')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/anthonypic.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Anthony Minichiello</div>
-          <p class="category text-white">Computer Science Major</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Computer Science Major</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="files/resume.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <!-- <div class="section">
@@ -66,8 +66,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Anthony Minichiello. Soon to be Computer Science major at Worcester Polytechnic Institute (WPI).</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+            <p>Hello! I am Anthony Minichiello, soon to be a Computer Science major at Worcester Polytechnic Institute (WPI).</p>
+            <p>I am an ambicious learner who's goal is to improve and strengthen others around myself. For more about myself; I run track in high school, and may continue to run D3 at WPI if I choose. <!--<a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a>--></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
