--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8">English</div>
+              <div class="col-sm-8">English, Spanish</div>
             </div>
           </div>
         </div>
